fixed minor bugs

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
     </head>
     <body>
-      <div id="root">Loading...</div>
-        <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
+        <div id="root">Loading...</div>
+        <script src="bundle.js"></script>
     </body>
 </html>
